[CSS] Ensure full coverage of grey background on login and main screens

--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -30,3 +30,11 @@
     background-repeat: no-repeat;
     background-position: center center;
   }
+
+  #login-screen {
+    min-height: 100vh;
+  }
+
+  #main-screen {
+    min-height: 100vh;
+  }
