--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -38,3 +38,33 @@
   #main-screen {
     min-height: 100vh;
   }
+
+
+  .icon-chevron-left {
+    display: inline-block;
+    height: 1.25rem;
+    width: 1.25rem;
+    background-image: url('./../../assets/chevron-left.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  .icon-chevron-right {
+    display: inline-block;
+    height: 1.25rem;
+    width: 1.25rem;
+    background-image: url('./../../assets/chevron-right.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  .carousel {
+    display: inline-flex;
+    align-items: center; 
+  }
+  
+  .carousel-option {
+    margin: 0 1rem;
+  }
